# asrec-telegram

./: .gitignore  pyproject.toml
.github/workflows/: python-package.yml
ioutils/: wrapped_fileio.py
migrations/models/: 0_20250625225037_init.py  0_20250916112555_init.py  1_20250626001121_update.py  2_20250626023134_update.py
src/: live_info.py  upload.py
src/asrec_telegram/: __init__.py  live_info.py  telegram_file.py  upload.py
src/asrec_telegram/bot/: client.py  media.py
src/asrec_telegram/database/: __init__.py  check_db.py  models.py
src/asrec_telegram/ioutils/: __init__.py  cached_callback_fileio.py  wrapped_fileio.py
src/bot/: media.py
src/database/: __init__.py  check_db.py  models.py
src/ioutils/: cached_callback_fileio.py  wrapped_fileio.py
tests/: test_cached_callback_fileio.py  test_wrapped_fileio.py
