[project]
name = "asrec-telegram"
version = "0.0.1"
requires-python = ">=3.11"
authors = [
    { name = "asoul-rec", email = "asoulranbi@gmail.com" }
]
dependencies = [
    "pyrofork>=2.3.68",
    "TgCrypto-pyrofork>=1.2.7",
    "tortoise-orm>=0.25.1",
]

[dependency-groups]
dev = [
    "aerich[toml]>=0.9.1",
    "anyio>=4.10.0",  # dependency of aerich but not listed
    "av>=15.0.0",
    "ipython",
]

[tool.uv.build-backend]
module-root = "src"

[tool.aerich]
tortoise_orm = "asrec_telegram.database.models.TORTOISE_ORM"
location = "./migrations"
src_folder = "./src"
