[project]
name = "asrec-telegram"
version = "0.0.2.alpha2"
requires-python = ">=3.13"
authors = [
    { name = "asoul-rec", email = "asoulranbi@gmail.com" }
]
dependencies = [
    "pyrofork>=2.3.68",
    "TgCrypto-pyrofork>=1.2.7",
    "tortoise-orm~=1.1",
]

[dependency-groups]
dev = [
    "av>=15.0.0",
    "ipython",
]

[build-system]
requires = ["uv_build>=0.11.22,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"

[tool.aerich]
tortoise_orm = "asrec_telegram.database.models.TORTOISE_ORM"
location = "./migrations"
src_folder = "./src"
